--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "d3-force": "^3.0.0",
+    "framer-motion": "^10.16.16",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "framer-motion": "^10.16.16",
-    "react-force-graph-2d": "^1.25.5",
-    "papaparse": "^5.4.1",
-    "d3-force": "^3.0.0"
+    "react-force-graph-2d": "^1.25.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.8"
+    "vite": "^7.2.4"
   }
 }
